home-automation/kokoro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kokoro
  namespace: kokoro
  labels:
    app.kubernetes.io/name: kokoro
spec:
  type: ClusterIP
  sessionAffinity: None
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 8880
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: kokoro
